--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation "androidx.room:room-runtime:2.5.1"
     implementation "androidx.room:room-paging:2.5.1"
+    implementation 'com.google.code.gson:gson:2.10.1'
     annotationProcessor "androidx.room:room-compiler:2.5.1"
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
