--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -25,6 +26,7 @@ android {
 
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 
     compileOptions {
@@ -38,10 +40,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
-    implementation "androidx.room:room-runtime:2.5.1"
-    implementation "androidx.room:room-paging:2.5.1"
+    implementation 'androidx.room:room-runtime:2.5.1'
+    implementation 'androidx.room:room-paging:2.5.1'
+    implementation 'androidx.paging:paging-runtime:3.1.1'
+    implementation 'androidx.paging:paging-rxjava3:3.1.1'
     implementation 'com.google.code.gson:gson:2.10.1'
-    annotationProcessor "androidx.room:room-compiler:2.5.1"
+    annotationProcessor 'androidx.room:room-compiler:2.5.1'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
