--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 .idea
 .gradle
 app/build
-app/release
+**/release
+**/androidTest
+**/test
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
